misc layout issues
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/branches/js2-work/phase3/js/mwEmbed@65676 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/modules/UploadWizard/css/uploadWizard.css
+++ b/modules/UploadWizard/css/uploadWizard.css
@@ -268,7 +268,7 @@ a[disabled=true]:hover {
 	margin-right: 12px;
 }
 
-.mwe-upwiz-details-data {
+.mwe-upwiz-data {
 	float: left;
 }
 
@@ -399,6 +399,8 @@ fieldset .mwe-long-textarea {
 	width: 280px;
 }
 
+
+
 .mwe-upwiz-details-label {
 	width: 100px;
 	float: left;
@@ -472,5 +474,4 @@ legend.mwe-legend {
 .mwe-upwiz-custom-deed {
 	margin-top: 5px;
 }
-
 
